# ISEM_Biodicee_AlexisGirot_TimeSeriesAnalysis

./: 404.html  README.md  index.html  objects.inv  pyproject.toml  setup.py
How-to guides/Bar_plot/: index.html
How-to guides/Classify data/: index.html
How-to guides/Download package/: index.html
How-to guides/Load data/: index.html
How-to guides/Save data/: index.html
ISEM_Biodicee_AlexisGirot_TimeSeriesAnalysis.egg-info/: PKG-INFO  SOURCES.txt
explanation/: index.html
how-to-guides/: index.html
reference/: index.html
src/ISEM_Biodicee_AlexisGirot_TimeSeriesAnalysis/: __init__.py  cheatcode.py  core.py
tests/: test 2.ipynb
tests/.ipynb_checkpoints/: Test 1-checkpoint.ipynb
tutorials/: Basics.ipynb  README.md  index.html
tutorials/.ipynb_checkpoints/: Basics-checkpoint.ipynb
tutorials/tutorials data/: .~lock.Data_by_row.csv#  Data_by_col.csv  Data_by_col.ods  Data_by_row.csv  Data_by_row.ods  Data_each_col.csv  Data_each_col.ods
tutorials/tutorials output/: Rhinogrades.json
