[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ISEM_Biodicee_AlexisGirot_TimeSeriesAnalysis"
version = "0.0.1"
authors = [
  { name="Alexis Girot", email="alexis.girot@normalesup.org" },
]
description = "Package for automatising time series analyses when looking for resilience indicators"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = ""
Issues = ""
